--- a/hachi.cabal
+++ b/hachi.cabal
@@ -22,6 +22,7 @@ executable hachi
   build-depends:       base >=4.9 && <4.10,
                        sdl2,
                        sdl2-image,
-                       text
+                       text,
+                       extra
   hs-source-dirs:      src
   default-language:    Haskell2010
