--- a/hachi.cabal
+++ b/hachi.cabal
@@ -17,12 +17,14 @@ cabal-version:       >=1.10
 
 executable hachi
   main-is:             Main.hs
-  other-modules:       Renderer 
+  other-modules:       Renderer,
+                       Game
   -- other-extensions:    
   build-depends:       base >=4.9 && <4.10,
                        sdl2,
                        sdl2-image,
                        text,
-                       extra
+                       extra,
+                       linear
   hs-source-dirs:      src
   default-language:    Haskell2010
