--- a/hachi.cabal
+++ b/hachi.cabal
@@ -18,9 +18,11 @@ cabal-version:       >=1.10
 executable hachi
   main-is:             Main.hs
   other-modules:       Graphics,
-                       Types
+                       Types,
+                       Obstacle
   -- other-extensions:    
   build-depends:       base,
-                       FunGEn
+                       FunGEn,
+                       random
   hs-source-dirs:      src
   default-language:    Haskell2010
